# Arete

./: .coverage  .gitignore  .gitmodules  .pre-commit-config.yaml  404.html  README.md  TODO.md  TODO_QA.md  debug_anki.py  id_test_log.txt  index.html  justfile  main.py  manifest.json  mkdocs.yml  original_plugin.py  plugin.diff  previous_ankiconnect.py  pyproject.toml  pytest_log.txt  pytest_output.txt  sitemap.xml  v1.2_vs_v1.4.diff
ANKI_PLUGIN/: index.html
ARCHITECTURE/: index.html
CLI/: index.html
CONTRIBUTING/: index.html
PLUGIN/: index.html
anki-plugin/: __init__.py  config.json  manifest.json  util.py  web.py
arete_ankiconnect/: __init__.py  edit.py  manifest.json
docker/: Dockerfile  docker-compose.host.yml  docker-compose.yml
docs/: ANKI_PLUGIN.md  ARCHITECTURE.md  CLI.md  CONTRIBUTING.md  PLUGIN.md  cli_guide.md  index.md  mock_heart.md  plugin_guide.md  publishing.md  publishing_guide.md  troubleshooting.md
mock_vault/: Performance Test.md  basic.md  media.md
obsidian-plugin/: .dependency-cruiser.js  .eslintrc.js  .prettierrc  CardView.ts  README.md  build_log.txt  data.json  esbuild.config.mjs  jest.config.js  main.js  main.ts  manifest.json  package-lock.json  package.json  styles.css  tsconfig.json  version-bump.mjs  versions.json
publishing/: index.html
release_artifacts/: arete-1.2.0-py3-none-any.whl  arete-1.4.0-py3-none-any.whl  main.js  manifest.json  styles.css
scripts/: debug_anki_query.py  debug_migrate.py  deploy_anki_addon.py  disable_anki_updates.py  install-windows.ps1  install_ankiconnect.py  patch_ankiconnect.py  (+5 more)
(+343 files in other folders)
