[project]
name = "obsidian-2-anki"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Adam Nguyen", email = "AdanatoNw@gmail.com" }
]
requires-python = "==3.11.*"
dependencies = [
    "apyanki>=0.17.1",
    "pyyaml>=6.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
